--- a/host.properties
+++ b/host.properties
@@ -1,5 +1,5 @@
 #ip=用户名//密码，格式如下
-#192.168.1.1=root//123456
-192.168.1.1=root//123456
-localhost=root//123456
-127.0.0.1=root//123456
+#192.168.1.1=daemon//123456
+192.168.1.1=daemon//123456
+localhost=daemon//123456
+127.0.0.1=daemon//123456
